- Issue 759:	Variabele verzonden door andere Nodo geeft hit in Eventlist

R568:
- Issue 767:	Inkomende RF Events komen niet in de webapp

R569:
- Issue 769:	Telnet sessie laat wachtwoord zien. Nu worden sterretjes weergegeven.
- Cosmetic: [Status UnitSet] is nu [Status Unit] geworden. Tevens wordt poort (weer) weergegeven.
- Cosmetic: Events afkomstig van klok hebben nu als bron [Clock]. Tevens toegevoegd aan Wildcard opties.
- Cosmetic: [Thisunit] gerenamed naar [System].
- Cosmetic: [Delay] gaf onterecht als 2e parameter een '-'. Verwijderd.
- Technisch: Aanpassing aanroep devices
- Technisch: Optimalisatie verzenden events naar I2C. Alleen verzenden events naar bekende Nodo's.
- Technisch: Kleine aanpassingen in opstartprocedure.
- Technisch: Aanpassing devices: Event->Command vulling in MMI en RAWSIGNAL call.
- Funktioneel: Nieuw type event: DEVICE_DATA T.b.v. uitwisselen gegevens andere (zelfbouw) apparaten met Nodo.

R570:
- Issue 760:	WiredOut poorten in Small werken niet goed.
                                                          
R575:
- Issue 773:	I2C vanaf Small werkt niet meer
- Issue 774:	oude UserEvents worden niet herkend ==> nog niet getest !!!
- Issue 766:	standaardisering syntax devices
- Issue 760:	WiredOut poorten in Small werken niet goed ==> nog niet getest!!!
- Issue 771:	KAKU A1,on komt binnen als Boot 1!!!

R588
- Issue 778:	PLUGIN_EVENT_IN lijkt niet te werken zoals m.i. bedoeld
- PLUGIN_SERIAL_IN toegevoegd als case in de plugin. Zie Plugin_255 voor toelichting.
- PLUGIN_ETHERNET_IN toegevoegd als case in de plugin. Zie Plugin_255 voor toelichting.

Nog te doen:                                                                       ]

testen:
- PLUGIN_DATA behandeling in Plugins
- Aanpassen en testen: Lock mechanisme

\*****************************************************************************************/